--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -16,8 +16,7 @@ jobs:
           python-version: "3.10"
       - name: Install Chrome
         run: sudo apt-get install google-chrome-stable
-      -name: install dependencies
+      - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run tests
         run: pytest
-
