--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       deployment_target:
-        discription: Choose target
+        description: Choose target
         required: true
-        default:
+        default: first_test
         type: choice
         options:
           - first_test
@@ -19,7 +19,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: setup Python
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
