--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,16 +1,7 @@
 name: Automated tests
 
 on:
-  workflow_dispatch:
-    inputs:
-      deployment_target:
-        description: Choose target
-        required: true
-        default: first_test
-        type: choice
-        options:
-          - first_test
-          - second_test
+  push
 
 jobs:
   test:
@@ -19,7 +10,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - name: Setup Python
+      - name: setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
@@ -27,9 +18,5 @@ jobs:
         run: sudo apt-get install google-chrome-stable
       - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: first_test
-        if: "github.event.inputs.deployment_target == 'first_test'"
-        run: pytest tests/test_fill_form.py::test_fill_form_1
-      - name: second_test
-        if: "github.event.inputs.deployment_target == 'second_test'"
-        run: pytest tests/test_fill_form.py::test_fill_form_2
+      - name: Run tests
+        run: pytest
